styles/styles.css
@import url(globalVars.css);
@import url(buttons.css);

*, *::before, *::after {
    box-sizing: border-box;
    margin: 0;
}
html {
    scroll-behavior: smooth;
}
body {
    font-size: 16px;
}

h1, h2, h3, h4, h5, h6 {
    color: var(--color-bodytext);
    font-family: 'Libre Franklin', sans-serif;
    font-weight: 500;
}
h2 {
    font-size: 2rem;
    line-height: 3rem;
    margin-bottom: 4rem;
}
h3 {
    font-size: 2rem;
    line-height: 3rem;
    margin-bottom: 2rem;
}
p, a, li, button {
    font-family: 'Libre Franklin', sans-serif;
}
p {
    line-height: 1.75rem;
    margin-bottom: 1rem;
}
button {
    font-size: 1.25rem;
    background-size: 0%;
    border: 3px solid var(--color-primary);
    border-radius: 1rem;
    cursor: pointer;
    display: flex;
    align-items: center;
    gap: 10px;
    padding: 1.25rem 1rem;
}
button.btn-icon::after {
    content: '';
    background-image: inherit;
    height: 1.5rem;
    width: 1.5rem;
}
a:has(button) {
    text-decoration: none;
}
button a:visited {
    color:inherit;
}
a {
    color: var(--color-primary);
}
.container {
    margin: auto;
    max-width: 1260px;
    padding: 0 2rem;
}

/*** Header ***/
header {
    background-color: var(--color-bg-light);
    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, .25);
    padding: 1.5rem 0;
    position: sticky;
    top: 0;
    width: 100%;
    z-index: 11;
}
header .container {
    display: flex;
    margin: auto;
    align-items: baseline;
    justify-content: space-between;
}
header .brand {
    color: var(--color-primary);
    display: flex;
    align-items: baseline;
    gap: 1rem;
    text-decoration: none;
}
header .brand h2 {
    font-size: 2.25rem;
    line-height: 4rem;
    margin: 0;
}
header .brand h1 {
    font-family: 'Libre Franklin', serif;
    font-size: 1.5rem;
}
nav {
    display: flex;
    flex-direction: column;
    position: absolute;
    right: 1.25rem;
}
nav ul {
    display: none;
    list-style: none;
}
nav li {
    font-size: 1.25rem;
}
nav a:visited {
    color: var(--color-primary);
}
nav a {
    color: var(--color-primary);
    text-decoration: none;
}
nav a:hover {
    border-bottom: 3px solid var(--color-primary);
}
nav a:active {
    color: var(--color-secondary-light);
    border-bottom: 3px solid var(--color-secondary-light);
}
nav.expanded {
    background-color: var(--color-primary);
    border-radius: 1rem;
}
nav.expanded ul {
    display: flex;
    padding: 1.5rem 2rem 1.5rem 2rem;
    flex-direction: column;
    gap: 1.5rem;
    align-content: stretch;
}
nav.expanded li {
    padding-bottom: 1.5rem ;
    border-bottom: 2px solid white;
}
nav.expanded a {
    color: white;
}
nav.expanded a:active {
    border: none;
    color: var(--color-secondary-light);
}
nav.expanded li:has(> a:active) {
    border-bottom: 2px solid var(--color-secondary-light);
}
nav.expanded button {
    background-image: url('../images/icons/x_white.svg');
    border: none;
    justify-content: space-between;
    padding-left: 2rem;
}
nav.expanded button:active {
    background-color: var(--color-primary);
    background-image: url('../images/icons/x_white.svg');
}
#socials {
    position: fixed;
    background-color: rgba(255, 255, 255, .6);
    border-radius: .5rem;
    bottom: 2rem;
    right: 2.5rem;
    display: flex;
    flex-direction: column;
    gap: 1.25rem;
    padding: .5rem;
}
#socials a.social:hover {
    border-bottom: none;
}
#socials a.social:active {
    border-bottom: none;
}
#socials a.social:visited {
    border-bottom: none;
}
.social img {
    height: 1.75rem;
}
nav.expanded #socials {
    display: none;
}
#overlay {
    background-color: rgba(0, 0, 0, .5);
    display: none;
    position: fixed;
    height: 100vh;
    width: 100vw;
    top: 0;
    left: 0;
    z-index: 10;
}
#overlay.visible {
    display: block;
}

/*** Main ***/
main .container {
    display: flex;
    flex-direction: column;
    gap: 5rem;
    padding-top: 5rem;
    padding-bottom: 7rem;
}
section {
    scroll-margin-top: 10rem;
}

/*** Hero ***/
#hero {
    display: flex;
    flex-direction: column;
    gap:1.5rem;
}
#values {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    gap: 2.5rem 1.5rem;
}
#values h2 {
    color: var(--color-primary);
    font-size: 3rem;
    line-height: 4rem;
    margin-bottom: 0;
}
#intro {
    display: flex;
    flex-direction: column;
    gap: 2rem;
    justify-content: space-between;
}
#intro-text {
    display: flex;
    flex-direction: column;
    gap: 1rem;
}
#intro-text p {
    line-height: 2rem;
}
#intro h3 {
    font-size: 2rem;
    margin-bottom: 0;
}
/*** Skills section ***/
#skills-container {
    display: grid;
    grid-template: 1fr 1fr 1fr / 1fr 1fr;
    gap: 3rem;
}
#skills-container span {
    text-align: center;
}
#skills-container img {
    width: 3rem;
    height: 3rem;
}
#skills-container p {
    font-size: 1.25rem;
    font-weight: 600;
    margin-top: .5rem;
}

/*** About Section ***/
#about-wrapper {
    display: flex;
    flex-direction: column;
    gap: 2rem;
}
#about-wrapper .portrait {
    background-image: url(../images/ec_portrait.jpg);
    background-position: center;
    background-size: cover;
    height: 30rem;
    width: 100%;
}

/*** Projects Section ***/
#projects-container {
    display: grid;
    grid: auto-flow / 1fr;
    gap: 3rem;
}
.project {
    background-color: var(--color-bg-light-offset);
    border-radius: 1.5rem;
    padding: 1.5rem;
}
.project-container {
    display: flex;
    flex-direction: column;
    gap: 2rem;
}
.project-container > * {
    flex: 1 1;
    min-width: 0;
}
.project-img {
    width: 100%;
}
.project-description {
    display: flex;
    flex-direction: column;
    gap: 1rem;
}
.skill-tag-list {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    gap: 1rem;
}
.skill-tag {
    font-family: 'Libre Franklin', sans-serif;
    font-weight: 600;
    border: 3px solid black;
    border-radius: 1.5rem;
    padding: .75rem 1rem;
}
.project-links {
    display: flex;
    flex-direction: row;
    gap: 1rem;
}

/*** Contact Section ***/
#contact-wrapper {
    display: flex;
    flex-direction: column;
    gap: 2rem;
}
.contact-links {
    display: flex;
    align-items: start;
    flex-direction: column;
    gap: 4rem;
}
.contact-links img {
    height: 4rem;
}
.contact-links p {
    margin-bottom: .75rem;
}
.email-icon {
    vertical-align: bottom;
    margin-right: 1rem;
}

/*** Footer ***/

footer {
    background-color: var(--color-primary);
}
footer ul {
    color: white;
    display: flex;
    flex-direction: column;
    gap: 2rem;
    padding: 3rem 0;
    list-style: none;
}
footer a {
    color: white;
}

/*** Tablet styles ***/
@media (min-width: 641px) {
    
    /*** Tablet Hero ***/
    #intro {
        max-width: 600px;
    }

    /*** Tablet Skills ***/
    #about-wrapper {
        align-items: center;
    }
    #skills-container {
        grid-template: 1fr 1fr / 1fr 1fr 1fr;
    }

    /*** Tablet About ***/
    #about-wrapper .portrait {
        max-width: 640px;
    }
    
}

/*** Desktop styles ***/
@media (min-width: 1025px) {
    
    /*** Desktop Header ***/
    nav, nav.expanded {
        position: relative;
        flex-direction: row;
        align-items: center;
        gap: 1.5rem;
    }
    nav ul {
        display: flex;
        gap: 1rem;
    }
    nav button {
        display: none;
    }
    #socials {
        position: static;
        flex-direction: row;
    }
    .social img {
        height: 1.5rem;
    }

    /*** Desktop Main ***/
    #hero {
        flex-direction: row;
        align-content: stretch;
    }
    #hero > div {
        width: 50%;
    }
    #values {
        flex-direction: column;
        justify-content: space-between;
    }
    #values h2 {
        font-size: 5.5rem;
    }

    /*** Desktop Skills ***/
    #skills-container {
        grid-template: 1fr / repeat(6, 1fr);
    }

    /*** Desktop About ***/
    #about-wrapper {
        flex-direction: row-reverse;
    }
    #about-wrapper .about-copy {
        flex: 2;
        min-width: 0;
    }
    #about-wrapper .portrait {
        flex: 1;
        min-width: 0;
        height: 24rem;
    }

    /*** Desktop Projects ***/
    #projects-container {
        grid:  auto-flow / 1fr 1fr;
    }

    /*** Desktop Contact ***/
    #contact-wrapper {
        width: 60%;
    }
    .contact-links {
        flex-direction: row;
    }

    /*** Desktop Footer ***/
    footer ul {
        flex-direction: row;
        justify-content: space-around;
        gap: 2rem;
        padding: 5rem 0;
    }
}

